--- a/rp.html
+++ b/rp.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <a href="../index.html">Головна</a>
             <a href="https://flipside-team.gitbook.io/flipside-rp/">Правила</a>
-            <a href="rp.html">Ресурс паки</a>
+            <a href="rp">Ресурс паки</a>
             <a href="http://rp.flipside.net.ua:29001">Мапа</a>
         </nav>
     </header>
