--- a/rp/main.html
+++ b/rp/main.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <a href="../index.html">Головна</a>
             <a href="https://flipside-team.gitbook.io/flipside-rp/">Правила</a>
-            <a href="../rp.html">Ресурс паки</a>
+            <a href="../rp">Ресурс паки</a>
             <a href="http://rp.flipside.net.ua:29001">Мапа</a>
         </nav>
     </header>
@@ -39,7 +39,7 @@
         <p>Натисніть "Копіювати" щоб скопіювати команду для встановлення ресурс паку на сервері, або натисніть "Встановити з Modrinth" щоб встановити файли ресурс паку на Modrinth</p>
         <input type="text" id="copyText" value="/rp set main" readonly>
         <button onclick="copyToClipboard()"><i class="fa-solid fa-copy"></i> Копіювати</button>
-        <a href="#"><i class="fa-solid fa-download"></i> Встановити з Modrinth</a>
+        <a href="../download/FlipSideRP.zip"><i class="fa-solid fa-download"></i> Встановити файлом</a>
     </div>
     <script src="https://kit.fontawesome.com/7fbf5a677b.js" crossorigin="anonymous"></script>
     <script>
