--- a/rp.html
+++ b/rp.html
@@ -38,7 +38,7 @@
     <script src="https://kit.fontawesome.com/7fbf5a677b.js" crossorigin="anonymous"></script>
     <script>
         function r_main() {
-            window.location.href = "rp/main.html";
+            window.location.href = "rp/main";
         }
     </script>
 </body>
