--- a/rp.html
+++ b/rp.html
@@ -12,7 +12,7 @@
     <header>
         <h2 class="logo">FlipSide RP | Ресурс паки</h2>
         <nav class="nav">
-            <a href="../index">Головна</a>
+            <a href="https://rp-web.flipside.net.ua">Головна</a>
             <a href="https://flipside-team.gitbook.io/flipside-rp/">Правила</a>
             <a href="rp">Ресурс паки</a>
             <a href="http://rp.flipside.net.ua:29001">Мапа</a>
