--- a/rp.html
+++ b/rp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles/style.css">
     <link rel="stylesheet" href="src/styles/rp.css">
-    <link rel="icon" href="src/img/server-icon.png" type="image/x-icon"/>
+    <link rel="icon" href="../src/img/server-icon.png" type="image/x-icon"/>
     <title>FlipSide RP | Ресурс паки</title>
 </head>
 <body>
