--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             window.location.href = "https://www.tiktok.com/@flipside_rp";
         }
         function r_mc_org_ua() {
-            window.location.href = "https://discord.gg/5DRCKTRhy3";
+            window.location.href = "https://minecraft.org.ua/minecraft-servers/FlipSide-RP/2410";
         }
     </script>
 </body>
