--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/src/styles/style.css">
-    <link rel="stylesheet" href="../static/src/styles/adaptive.css">
-    <link rel="icon" href="../static/src/img/fl-rp-logo-bg.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="../src/styles/style.css">
+    <link rel="stylesheet" href="../src/styles/adaptive.css">
+    <link rel="icon" href="../src/img/fl-rp-logo-bg.ico" type="image/x-icon"/>
     <script src="https://kit.fontawesome.com/7fbf5a677b.js" crossorigin="anonymous"></script>
     <!-- Embed -->
     <meta property="type" content="website">
