--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         
         <nav class="login">
-            <a href="{{oauth_url}}">Логін</a>
+            <a href="#">Логін</a>
         </nav>
     </header>
     
