season 3 end update
Final update for GitHub Pages website

--- a/index.html
+++ b/index.html
@@ -44,22 +44,17 @@
     
     <section class="home">
         <h1 class="hTitle backdrop-blur-sm bg-slate-800/30">FlipSide RP</h1>
-        <p class="backdrop-blur-sm bg-slate-800/30">україномовний Minecraft сервер з елементами РП, на версії Java 1.20.1</p>
+        <p class="backdrop-blur-sm bg-slate-800/30">україномовний Minecraft сервер з елементами РП</p>
         <div class="socials">
             <div class="column">
-                <button id="socials" class="discord" onclick="r_discord()"><i class="fa-brands fa-discord"></i> Discord</button>
-                <button id="socials" class="youtube" onclick="r_youtube()"><i class="fa-brands fa-youtube"></i> YouTube</button>
-            </div>
-            <div class="column">
-                <button id="socials" class="tiktok" onclick="r_tt()"><i class="fa-brands fa-tiktok"></i> TikTok</button>
-                <button id="socials" class="mc-org-ua" onclick="r_mc_org_ua()"><i class="fa-solid fa-gamepad"></i> Моніторинг</button>
+                <button id="socials" class="discord" onclick="r_discord()">Реєстрація на наступний сезон 👉 <i class="fa-brands fa-discord"></i></button>
             </div>
         </div>
     </section>
 
     <footer class="backdrop-blur-sm bg-slate-800/30">
         <div class="fLeft">
-            <h2 class="logo">FlipSide RP</h2>
+            <h2 class="logo" style="color: white;">FlipSide RP</h2>
             <p>Copyright © FlipSide Team. FlipSide Team і сервера FlipSide не відносятся до Mojang Studios та Microsoft</p>
         </div>
         <div class="fRight">
